--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="animated-footer">
+    <div class="static-footer">
       <h2>Static Footers</h2>
 
       <div class="footer-container animated animated-1">
@@ -56,7 +56,6 @@
         <p>Address: 456 Oak Avenue, Townsville, Country</p>
       </div>
 
-      
       <div class="footer-container animated animated-3">
         <h3>Connect With Us</h3>
         <p>Email: connect@company3.com<br />Phone: +1-555-123-4567</p>
