feat(payment): adding new features

--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -1,78 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Static and Animated Footers</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <div class="static-footer">
-      <h2>Animated Footers</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer Examples</title>
+    <link rel="stylesheet" href="../page2/assets/css/style.css">
+</head>
+<body>
+    <!-- Footer 1 -->
+    <footer class="footer footer-light">
+        <div class="container">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Main</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+            <p>© 2018 Dreamy Inc. All rights reserved</p>
+        </div>
+    </footer>
 
-      <div class="footer-container footer-1">
-        <h3>Contact Us</h3>
-        <p>Email: info@company1.com<br />Phone: +1-123-456-7890</p>
-        <p>Address: 123 Main Street, Cityville, Country</p>
-      </div>
+    <!-- Footer 2 -->
+    <footer class="footer footer-dark">
+        <div class="container">
+            <div class="footer-logo">
+              <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+            <p>© 2018 Dreamy Inc. All rights reserved</p>
+        </div>
+    </footer>
 
-      <div class="footer-container footer-2">
-        <h3>Visit Us</h3>
-        <p>Email: visit@company2.com<br />Phone: +1-987-654-3210</p>
-        <p>Address: 456 Oak Avenue, Townsville, Country</p>
-      </div>
+    <!-- Footer 3 -->
+    <footer class="footer footer-light">
+        <div class="container">
+            <div class="footer-section">
+                <h4>About</h4>
+                <ul>
+                    <li><a href="#">Company</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Blog</h4>
+                <ul>
+                    <li><a href="#">Tech</a></li>
+                    <li><a href="#">Adventure</a></li>
+                    <li><a href="#">Video</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Products</h4>
+                <ul>
+                    <li><a href="#">Dreamy App</a></li>
+                    <li><a href="#">Dreamy Desktop</a></li>
+                    <li><a href="#">Dreamy Cloud</a></li>
+                </ul>
+            </div>
+            <div class="footer-logo">
+              <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+              <p>It's all about your dreams</p>
+                <div class="social-icons">
+                  <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkLcBrDHgOj0B_qrNTygXlcjOPlRfGOBqZrw&s" alt="Facebook"></a>
+                  <a href="#"><img src="https://cdn-icons-png.freepik.com/256/3938/3938028.png?semt=ais_hybrid" alt="Twitter"></a>
+                  <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-      <div class="footer-container footer-3">
-        <h3>Connect With Us</h3>
-        <p>Email: connect@company3.com<br />Phone: +1-555-123-4567</p>
-        <p>Address: 789 Pine Road, Villageland, Country</p>
-      </div>
+    <!-- Footer 4 -->
+    <footer class="footer footer-dark">
+        <div class="container">
+            <div class="footer-logo">
+              <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <address>
+                    <p>24 Atlantic Ave, Brooklyn, NY 11201</p>
+                    <p>Email: info@dreamy.com</p>
+                    <p>Phone: +1 646 987 6547</p>
+                </address>
+            </div>
+            <div class="footer-section">
+                <h4>Subscribe</h4>
+                <form>
+                    <input type="email" placeholder="Enter your email">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <p>© 2018 Dreamy Inc. All rights reserved</p>
+    </footer>
 
-      <div class="footer-container footer-4">
-        <h3>Find Us</h3>
-        <p>Email: find@company4.com<br />Phone: +1-777-456-7890</p>
-        <p>Address: 101 Lakeview Drive, Hamletville, Country</p>
-      </div>
+    <!-- Footer 5 -->
+    <footer class="footer footer-light">
+        <div class="container">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+            <p>© 2018 Dreamy Inc. All rights reserved</p>
+        </div>
+    </footer>
 
-      <div class="footer-container footer-5">
-        <h3>Explore With Us</h3>
-        <p>Email: explore@company5.com<br />Phone: +1-888-987-6543</p>
-        <p>Address: 202 River Bend Road, Countryside, Country</p>
-      </div>
+   <!-- Animated Footer 1 -->
+   <footer class="footer footer-light animated-footer bounce-in hover-effect-1">
+    <div class="container">
+        <div class="footer-logo">
+          <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+          <p>It's all about your dreams</p>
+        </div>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="payment-icons">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal">
+            <img src="https://w7.pngwing.com/pngs/385/197/png-transparent-visa-flat-brand-logo-icon-thumbnail.png" alt="Visa">
+        </div>
     </div>
+    <p>© 2016 Dreamy Inc. All rights reserved</p>
+</footer>
 
-    <div class="static-footer">
-      <h2>Static Footers</h2>
-
-      <div class="footer-container animated animated-1">
-        <h3>Contact Us</h3>
-        <p>Email: info@company1.com<br />Phone: +1-123-456-7890</p>
-        <p>Address: 123 Main Street, Cityville, Country</p>
-      </div>
-
-      <div class="footer-container animated animated-2">
-        <h3>Visit Us</h3>
-        <p>Email: visit@company2.com<br />Phone: +1-987-654-3210</p>
-        <p>Address: 456 Oak Avenue, Townsville, Country</p>
-      </div>
-
-      <div class="footer-container animated animated-3">
-        <h3>Connect With Us</h3>
-        <p>Email: connect@company3.com<br />Phone: +1-555-123-4567</p>
-        <p>Address: 789 Pine Road, Villageland, Country</p>
-      </div>
-
-      <div class="footer-container animated animated-4">
-        <h3>Find Us</h3>
-        <p>Email: find@company4.com<br />Phone: +1-777-456-7890</p>
-        <p>Address: 101 Lakeview Drive, Hamletville, Country</p>
-      </div>
-
-      <div class="footer-container animated animated-5">
-        <h3>Explore With Us</h3>
-        <p>Email: explore@company5.com<br />Phone: +1-888-987-6543</p>
-        <p>Address: 202 River Bend Road, Countryside, Country</p>
-      </div>
+<!-- Animated Footer 2 -->
+<footer class="footer footer-dark animated-footer slide-in hover-effect-2">
+    <div class="container">
+        <div class="footer-logo">
+          <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+        </div>
+        <div class="footer-section">
+            <h4>Contact Us</h4>
+            <address>
+                <p>24 Atlantic Ave, Brooklyn, NY 11201</p>
+                <p>Email: info@dreamy.com</p>
+                <p>Phone: +1 646 987 6547</p>
+            </address>
+        </div>
+        <div class="footer-section">
+            <h4>Subscribe</h4>
+            <form>
+                <input type="email" placeholder="Enter your email">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="social-icons">
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkLcBrDHgOj0B_qrNTygXlcjOPlRfGOBqZrw&s" alt="Facebook"></a>
+          <a href="#"><img src="https://cdn-icons-png.freepik.com/256/3938/3938028.png?semt=ais_hybrid" alt="Twitter"></a>
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
+        </div>
     </div>
-  </body>
+    <p>© 2018 Dreamy Inc. All rights reserved</p>
+</footer>
+
+<!-- Animated Footer 3 -->
+<footer class="footer footer-light animated-footer fade-in hover-effect-3">
+    <div class="container">
+        <div class="footer-logo">
+          <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+          <p>It's all about your dreams</p>
+        </div>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="social-icons">
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkLcBrDHgOj0B_qrNTygXlcjOPlRfGOBqZrw&s" alt="Facebook"></a>
+          <a href="#"><img src="https://cdn-icons-png.freepik.com/256/3938/3938028.png?semt=ais_hybrid" alt="Twitter"></a>
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
+        </div>
+    </div>
+    <p>© 2016 Dreamy Inc. All rights reserved</p>
+</footer>
+
+<!-- Animated Footer 4 -->
+<footer class="footer footer-dark animated-footer zoom-in hover-effect-4">
+    <div class="container">
+        <div class="footer-logo">
+          <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+        </div>
+        <div class="footer-section">
+            <h4>Contact Us</h4>
+            <address>
+                <p>24 Atlantic Ave, Brooklyn, NY 11201</p>
+                <p>Email: info@dreamy.com</p>
+                <p>Phone: +1 646 987 6547</p>
+            </address>
+        </div>
+        <div class="footer-section">
+            <h4>Subscribe</h4>
+            <form>
+                <input type="email" placeholder="Enter your email">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="payment-icons">
+          <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal">
+          <img src="https://w7.pngwing.com/pngs/385/197/png-transparent-visa-flat-brand-logo-icon-thumbnail.png" alt="Visa">
+        </div>
+    </div>
+    <p>© 2018 Dreamy Inc. All rights reserved</p>
+</footer>
+
+<!-- Animated Footer 5 -->
+<footer class="footer footer-light animated-footer flip-in hover-effect-5">
+    <div class="container">
+        <div class="footer-logo">
+            <img src="https://e7.pngegg.com/pngimages/769/375/png-clipart-chocolate-chip-cookie-biscuits-christmas-cookie-gingerbread-man-cookies-logo-food-cake.png" alt="Logo">
+            <p>It's all about your dreams</p>
+        </div>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <div class="payment-icons">
+          <img src="https://cdn-icons-png.flaticon.com/512/174/174861.png" alt="PayPal">
+          <img src="https://w7.pngwing.com/pngs/385/197/png-transparent-visa-flat-brand-logo-icon-thumbnail.png" alt="Visa">
+        </div>
+        <div class="social-icons">
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQkLcBrDHgOj0B_qrNTygXlcjOPlRfGOBqZrw&s" alt="Facebook"></a>
+          <a href="#"><img src="https://cdn-icons-png.freepik.com/256/3938/3938028.png?semt=ais_hybrid" alt="Twitter"></a>
+          <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
+        </div>
+    </div>
+    <p>© 2016 Dreamy Inc. All rights reserved</p>
+</footer>
+
+</body>
 </html>
