feat(payment): Fixed page2

--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -12,11 +12,11 @@
         <div class="container">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Main</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li class="no-hover"><a href="#">Main</a></li>
+                    <li class="no-hover"><a href="#">Products</a></li>
+                    <li class="no-hover"><a href="#">Blog</a></li>
+                    <li class="no-hover"><a href="#">Shop</a></li>
+                    <li class="no-hover"><a href="#">Contacts</a></li>
                 </ul>
             </nav>
             <p>© 2018 Dreamy Inc. All rights reserved</p>
@@ -31,10 +31,10 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li class="no-hover"><a href="#">Products</a></li>
+                    <li class="no-hover"><a href="#">Blog</a></li>
+                    <li class="no-hover"><a href="#">Shop</a></li>
+                    <li class="no-hover"><a href="#">Contacts</a></li>
                 </ul>
             </nav>
             <p>© 2018 Dreamy Inc. All rights reserved</p>
@@ -47,25 +47,25 @@
             <div class="footer-section">
                 <h4>About</h4>
                 <ul>
-                    <li><a href="#">Company</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Careers</a></li>
+                    <li class="no-hover"><a href="#">Company</a></li>
+                    <li class="no-hover"><a href="#">Community</a></li>
+                    <li class="no-hover"><a href="#">Careers</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h4>Blog</h4>
                 <ul>
-                    <li><a href="#">Tech</a></li>
-                    <li><a href="#">Adventure</a></li>
-                    <li><a href="#">Video</a></li>
+                    <li class="no-hover"><a href="#">Tech</a></li>
+                    <li class="no-hover"><a href="#">Adventure</a></li>
+                    <li class="no-hover"><a href="#">Video</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h4>Products</h4>
                 <ul>
-                    <li><a href="#">Dreamy App</a></li>
-                    <li><a href="#">Dreamy Desktop</a></li>
-                    <li><a href="#">Dreamy Cloud</a></li>
+                    <li class="no-hover"><a href="#">Dreamy App</a></li>
+                    <li class="no-hover"><a href="#">Dreamy Desktop</a></li>
+                    <li class="no-hover"><a href="#">Dreamy Cloud</a></li>
                 </ul>
             </div>
             <div class="footer-logo">
@@ -110,10 +110,10 @@
         <div class="container">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li class="no-hover"><a href="#">Products</a></li>
+                    <li class="no-hover"><a href="#">Blog</a></li>
+                    <li class="no-hover"><a href="#">Shop</a></li>
+                    <li class="no-hover"><a href="#">Contacts</a></li>
                 </ul>
             </nav>
             <p>© 2018 Dreamy Inc. All rights reserved</p>
@@ -129,11 +129,11 @@
         </div>
         <nav class="footer-nav">
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li class="no-hover"><a href="#">About</a></li>
+                <li class="no-hover"><a href="#">Products</a></li>
+                <li class="no-hover"><a href="#">Blog</a></li>
+                <li class="no-hover"><a href="#">Shop</a></li>
+                <li class="no-hover"><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <div class="payment-icons">
@@ -183,11 +183,11 @@
         </div>
         <nav class="footer-nav">
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li class="no-hover"><a href="#">About</a></li>
+                <li class="no-hover"><a href="#">Products</a></li>
+                <li class="no-hover"><a href="#">Blog</a></li>
+                <li class="no-hover"><a href="#">Shop</a></li>
+                <li class="no-hover"><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <div class="social-icons">
@@ -196,8 +196,7 @@
           <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
         </div>
     </div>
-    <p>© 2016 Dreamy Inc. All rights reserved</p>
-</footer>
+    <p>© 2016 Dreamy Inc. All rights reserved</footer>
 
 <!-- Animated Footer 4 -->
 <footer class="footer footer-dark animated-footer zoom-in hover-effect-4">
@@ -225,8 +224,7 @@
           <img src="https://w7.pngwing.com/pngs/385/197/png-transparent-visa-flat-brand-logo-icon-thumbnail.png" alt="Visa">
         </div>
     </div>
-    <p>© 2018 Dreamy Inc. All rights reserved</p>
-</footer>
+    <p>© 2018 Dreamy Inc. All rights reserved</footer>
 
 <!-- Animated Footer 5 -->
 <footer class="footer footer-light animated-footer flip-in hover-effect-5">
@@ -237,11 +235,11 @@
         </div>
         <nav class="footer-nav">
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li class="no-hover"><a href="#">About</a></li>
+                <li class="no-hover"><a href="#">Products</a></li>
+                <li class="no-hover"><a href="#">Blog</a></li>
+                <li class="no-hover"><a href="#">Shop</a></li>
+                <li class="no-hover"><a href="#">Contacts</a></li>
             </ul>
         </nav>
         <div class="payment-icons">
@@ -254,8 +252,4 @@
           <a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwH--J-ZMUg8puNfUxE6YXQi3yVHuAORDxow&s" alt="Instagram"></a>
         </div>
     </div>
-    <p>© 2016 Dreamy Inc. All rights reserved</p>
-</footer>
-
-</body>
-</html>
+    <p>© 2016 Dreamy Inc. All rights reserved</footer>
